<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="stock_settings">Stock Settings</string>
    <string name="htc_internet_pt_title">Internet pass-through</string>
    <string name="htc_internet_pt_summary">Connect to the Internet via PC. Please plug in USB cable.</string>
    <string name="PSFail">Unable to connect to PC</string>
    <string name="PSPass">Internet pass-through connected</string>
    <string name="PSMsg">If you are unable to connect to the Internet via Internet pass-through, please ensure that your PC firewall settings allow this type of connection. Internet pass-through only supports TCP connections if your PC connects to the Internet via PPP (e.g. dial up, xDSL, or VPN).</string>
    <string name="PSTitle">Internet pass-through Notice</string>
    <string name="PSButton">OK</string>
    <string name="do_not_show_psmsg">"Don't show next time"</string>
    <string name="htc_gestures_title">Htc gestures</string>
    <string name="htc_gestures_summary">Enable 3-finger output gestures and ignore gestures with more fingers</string>
    <string name="htc_fastboot_title">Fast boot</string>
    <string name="htc_fastboot_summary">Not recommended with some Market apps</string>
    <string name="htc_power_saver_title">HTC power saver</string>
    <string name="htc_power_saver_summary">Enable to get longer battery life</string>
    <string name="htc_wifi_enhancer_title">Wifi Enhance</string>
    <string name="htc_wifi_enhancer_summary">Enable to get better wifi performance, and it will consume more battery, probably need to reboot your phone to take effect</string>
</resources>
